force-app/src/objects/c2g__codaCurrencyRevaluationGroup__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcurrencyrevaluation</customHelpPage>
    <description>Groups currency revaluations to be processed as a batch.</description>
    <fields>
        <fullName>c2g__AllGLAs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Revalue all eligible GLAs.</description>
        <label>All GLAs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__AutoPost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autopost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Currency Revaluation Groups</relationshipLabel>
        <relationshipName>CurrencyRevaluationGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation Criteria</label>
        <referenceTo>c2g__CurrencyRevaluationCriteria__c</referenceTo>
        <relationshipLabel>Currency Revaluation Groups</relationshipLabel>
        <relationshipName>CurrencyRevaluationGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DisplayName__c</fullName>
        <label>Group Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GroupType__c</fullName>
        <description>Stores the Group Type. The Group Types are Currency Revaluation, Currency Translation, Currency Revaluation and Translation and Currency Translation to Reporting.</description>
        <inlineHelpText>Stores the Group Type. The Group Types are Currency Revaluation, Currency Translation, and Currency Revaluation and Translation.</inlineHelpText>
        <label>Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency Revaluation</fullName>
                </value>
                <value>
                    <fullName>Currency Translation</fullName>
                </value>
                <value>
                    <fullName>Currency Revaluation and Translation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluation Groups</relationshipLabel>
        <relationshipName>CurrencyRevaluationGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__RevalueHomeCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should we revalue the home currency?</description>
        <label>Revalue Home Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduledTime__c</fullName>
        <description>The time at which this group has been scheduled to run.</description>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Generating</fullName>
                </value>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>UnitOfWork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Group</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaCurrencyRevaluationGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaCurrencyRevaluationGroup</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__DisplayName__c</columns>
        <columns>c2g__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRGP{000000}</displayFormat>
        <label>Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>